...
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <com.miis.horusendoview.widget.AutoFitTextureView
            android:id="@+id/cameraView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
...
                    android:textStyle="bold" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/promptSnapshot"
                android:layout_width="@dimen/img_size_20"
                android:layout_height="@dimen/img_size_20"
                android:src="@drawable/oval_green"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/patientIdLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22px"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="6px"
                app:cardForegroundColor="@android:color/transparent"
...
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="32px"
                        android:layout_height="32px"
                        android:src="@drawable/user_on_not_logging" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/patientId"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10px"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:maxLines="1"
...
                android:layout_marginTop="22px"
                android:scaleType="fitXY"
                android:visibility="invisible"
                app:srcCompat="@drawable/scope_4hr" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/record"
                android:layout_width="match_parent"
                android:layout_height="170px"
                android:layout_marginTop="22px"
                android:background="@drawable/bg_live_btn_01"
                android:gravity="center"
                android:orientation="vertical">
...
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/record" />


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/recordingTimeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/recordTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:maxLines="1"
                        android:textColor="@color/text_color_01"
                        android:textSize="35px"
                        android:textStyle="bold"
                        tools:text="00:00:00" />

                    <View
                        android:id="@+id/recordLine"
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/text_color_01"
...

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/snapshot"
                android:layout_width="match_parent"
                android:layout_height="170px"
                android:layout_marginTop="14px"
                android:background="@drawable/bg_live_btn_01"
                android:padding="30px"
                android:src="@drawable/snapshot" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnAdjust"
                android:layout_width="match_parent"
                android:layout_height="170px"
                android:layout_marginTop="14px"
                android:background="@drawable/bg_live_btn_02"
                android:padding="30px"
                android:src="@drawable/adjust" />
...
            app:layout_constraintEnd_toStartOf="@id/cameraView"
            app:layout_constraintStart_toEndOf="@+id/rightLayout"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <com.miis.horusendoview.widget.CameraSettingsView
            android:id="@+id/cameraSettings"
            android:layout_width="452px"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rightLayout" />

...
