...
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="80px"
                android:gravity="center">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/reset"
                    android:layout_width="58px"
                    android:layout_height="58px"
                    android:adjustViewBounds="true"
                    android:src="@drawable/adjust_reset"
                    app:shapeAppearanceOverlay="@style/circle"
                    app:contentPadding="5px"/>
...
                        android:textColor="@color/gray_e0e0e0"
                        android:textSize="30px" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.miis.horusendoview.widget.RulerSeekBar
                    android:id="@+id/colourSeekBar"
                    style="@style/SeekBar01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12px"
                    android:layout_marginEnd="-13dp"
...
                        android:textColor="@color/gray_e0e0e0"
                        android:textSize="30px" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.miis.horusendoview.widget.RulerSeekBar
                    android:id="@+id/contrastSeekBar"
                    style="@style/SeekBar01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12px"
                    android:layout_marginEnd="-13dp"
...
                        android:textColor="@color/gray_e0e0e0"
                        android:textSize="30px" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.miis.horusendoview.widget.RulerSeekBar
                    android:id="@+id/sharpnessSeekBar"
                    style="@style/SeekBar01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12px"
                    android:layout_marginEnd="-13dp"
...
                        android:textColor="@color/gray_e0e0e0"
                        android:textSize="30px" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.miis.horusendoview.widget.RulerSeekBar
                    android:id="@+id/brightnessSeekBar"
                    style="@style/SeekBar01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12px"
                    android:layout_marginEnd="-13dp"
...
