...

                            </androidx.appcompat.widget.LinearLayoutCompat>

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <androidx.appcompat.widget.AppCompatImageButton
                            android:id="@+id/search"
                            android:layout_width="@dimen/layout_width_80"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/margin_16"
                            android:background="@drawable/bg_serch"
                            android:paddingStart="@dimen/padding_16"
                            android:paddingEnd="@dimen/padding_16"
...

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recyclerView"
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:clipToPadding="false"
                                android:fadeScrollbars="false"
                                android:scrollbarAlwaysDrawHorizontalTrack="true"
                                android:scrollbarSize="8dp"
...
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <androidx.appcompat.widget.LinearLayoutCompat
                                android:id="@+id/loadingLayout"
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:background="@color/gray_01000000"
                                android:gravity="center"
                                android:visibility="gone"
                                app:layout_constraintBottom_toBottomOf="parent"
...
                                android:background="@drawable/bg_filename"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/previewFileInfo"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:ellipsize="end"
                                    android:maxLines="1"
                                    android:paddingStart="@dimen/padding_8"
...
