...
                    android:layout_weight="1"
                    android:background="@drawable/bg_main_btn"
                    android:padding="29px"
                    android:src="@drawable/live" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/changeCamera"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="15px"
                    android:layout_marginTop="12px"
                    android:layout_marginEnd="15px"
                    android:layout_weight="1"
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="9px"
                        android:textSize="35px"
                        android:textStyle="bold"
                        android:textColor="@color/gray_e0e0e0"
                        tools:text="Ch1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/changeCameraImg"
                        android:layout_width="0dp"
...
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ibDataManagement"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="15px"
                    android:layout_marginTop="14px"
                    android:layout_marginEnd="15px"
                    android:layout_weight="1"
...
